[tool.poetry]
name = "py_api_boilerplate"
version = "0.1.0"
description = "Api boilerplate"
authors = ["rafael rotiroti <rotirotirafa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
PyMySQL = "^1.0.2"
pytest = "^7.1.2"
SQLAlchemy = "^1.4.40"
Flask-RESTful = "^0.3.9"
psycopg2 = "^2.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
